--- a/Front/vite-project/src/templates/about.html
+++ b/Front/vite-project/src/templates/about.html
@@ -50,12 +50,10 @@
 
   <div class="container-about">
     <section class="about">
-
       <div class="about-image-container">
         <img class="about-image" src="../assets/images/Animais/mamifero/jaguatirica/Jaguatirica-about.webp" alt="Imagem de uma jaguatirica em uma árvore">
       </div>
       <h2 class="titulo-about">Sobre Nós</h2>
-
       <p class="about-text">O Instituto Jaguatirica é uma organização sem fins lucrativos fundada em 15 de junho de 2010, com a missão de promover a proteção e a conservação da fauna silvestre brasileira. Somos um grupo de biólogos, veterinários, ecologistas e voluntários apaixonados pela natureza e comprometidos com a recuperação de espécies nativas que enfrentam sérios riscos devido à ação humana, como o tráfico ilegal de animais, o desmatamento e as mudanças climáticas.
       </p>
       <h3 class="titulo-about">Nossa História</h3>
@@ -74,26 +72,29 @@
         <li>
           <i class="fas fa-paw"></i> 
           <p class="about-text-list">Compromisso com a Vida Selvagem:</p> 
-          <p class="about-text">Cada animal resgatado é tratado com o máximo de cuidado, respeito e dedicação. Acreditamos que todas as espécies merecem ser preservadas e protegidas.</p> 
+          <p class="about-text small">Cada animal resgatado é tratado com o máximo de cuidado, respeito e dedicação. Acreditamos que todas as espécies merecem ser preservadas e protegidas.</p> 
         </li>
         <li>
           <i class="fas fa-seedling"></i> 
           <p class="about-text-list">Educação Ambiental:</p> 
-          <p class="about-text">Trabalhamos ativamente para conscientizar o público sobre a importância da preservação e dos impactos do tráfico de animais e do desmatamento. Acreditamos que a mudança começa na educação e na informação.</p> 
+          <p class="about-text small">Trabalhamos ativamente para conscientizar o público sobre a importância da preservação e dos impactos do tráfico de animais e do desmatamento. Acreditamos que a mudança começa na educação e na informação.</p> 
         </li>
         <li>
           <i class="fas fa-flask"></i> 
           <p class="about-text-list">Inovação e Pesquisa:</p> 
-          <p class="about-text">Buscamos sempre aplicar as melhores práticas científicas no tratamento e reabilitação dos animais. Nossos projetos de pesquisa visam entender melhor a biodiversidade brasileira e as necessidades específicas de conservação das espécies.</p> 
+          <p class="about-text small">Buscamos sempre aplicar as melhores práticas científicas no tratamento e reabilitação dos animais. Nossos projetos de pesquisa visam entender melhor a biodiversidade brasileira e as necessidades específicas de conservação das espécies.</p> 
         </li>
         <li>
           <i class="fas fa-handshake"></i> 
           <p class="about-text-list">Responsabilidade Social e Ambiental:</p> 
-          <p class="about-text">Sabemos que a preservação da fauna e da flora depende da colaboração de todos. Nosso trabalho se estende a criar soluções sustentáveis e integrar as comunidades locais em nossos esforços de conservação.</p> 
+          <p class="about-text small">Sabemos que a preservação da fauna e da flora depende da colaboração de todos. Nosso trabalho se estende a criar soluções sustentáveis e integrar as comunidades locais em nossos esforços de conservação.</p> 
         </li>
       </ul>
-      <h3 class="titulo-about">Como posso ajudar?</h3>
-      <div class="card-container">
+    </section>
+    </div>
+      <div class="card-container-title">
+        <h3 class="titulo-card">Como posso ajudar?</h3>
+        <div class="card-container">
         <div class="card">
           <i class="fas fa-hands-helping"></i>
           <p class="about-text-list-card">Seja um voluntário:</p>
@@ -109,14 +110,16 @@
           <p class="about-text-list-card">Divulgue nossa causa:</p>
           <p class="about-text-card">Espalhe nossa mensagem! A conscientização é uma ferramenta poderosa para a mudança.</p>
         </div>
-      </div>
-      </p> 
-      <h3 class="titulo-about">Junte-se a nós!</h3>
-      <p class="about-text">Nós acreditamos que, com o apoio de todos, podemos construir um futuro mais sustentável e saudável para a fauna brasileira. A nossa missão não seria possível sem o engajamento da sociedade e a colaboração entre ciência, educação e ação direta. Vamos, juntos, proteger o que há de mais precioso: a vida selvagem do Brasil!
-      </p>
-      <a href="./src/templates/programas.html" class="about-button">CONHEÇA NOSSOS PROJETOS!</a>
-    </section>
-  </div>
+    </div>
+    <div class="container-about">
+      <section class="about">
+        <h3 class="titulo-about">Junte-se a nós!</h3>
+        <p class="about-text">Nós acreditamos que, com o apoio de todos, podemos construir um futuro mais sustentável e saudável para a fauna brasileira. A nossa missão não seria possível sem o engajamento da sociedade e a colaboração entre ciência, educação e ação direta. Vamos, juntos, proteger o que há de mais precioso: a vida selvagem do Brasil!
+        </p>
+        <a href="./src/templates/programas.html" class="about-button">CONHEÇA NOSSOS PROJETOS!</a>
+      </section>
+    </div>
+  
 
 <script src="../menu.js"></script>
 
