--- a/Front/vite-project/src/index.css
+++ b/Front/vite-project/src/index.css
@@ -13,6 +13,7 @@
   --cor-verde-escuro: #163513;
   --cor-verde-escuro-hover: #36862f82;
   --cor-escura-2-hover: #4414178f;
+  --cor-dropdown-hover: #583336;
   --cor-animal-clara-1: #fdf5f0;
   --cor-animal-clara-2: #faebe1;
   --cor-label-fem: #fb74bc;
