--- a/Front/vite-project/src/static/header.css
+++ b/Front/vite-project/src/static/header.css
@@ -11,7 +11,7 @@
 .menu {
   display: flex;
   flex-direction: column;
-  padding: 0.5em;
+  padding: 0;
   margin: 0;
   width: 100vw;
 }
@@ -43,6 +43,10 @@
   text-align: center;
 }
 
+.menu-item {
+  position: relative;
+}
+
 .menu-item, .menu-item a{
   display: block;
   padding: 0.5em;
@@ -50,7 +54,7 @@
 
 .menu-item a:hover, .menu-item a:focus {
   background-color: var(--cor-escura-2-hover);
-  padding: 0.5em; 
+  padding: 0.75em;
 }
 
 
@@ -92,6 +96,36 @@
   height: 10%;
   width: 10%;
   border-radius: 50%;
+}
+
+.dropdown-menu-dkt {
+  display: none;
+}
+
+.dropdown-menu {
+  display: none;
+  background-color: var(--cor-escura-2);
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  padding-left: 0;
+  }
+
+.dropdown-item {
+  background-color: var(--cor-dropdown-hover);
+}
+
+.dropdown-menu.show {
+  display: block;
+  animation: slideDown 0.3s ease-out;
+}
+
+@keyframes slideDown {
+  from {
+    transform: translateY(-20px);
+    }
+  to {
+    transform: translateY(0);
+  }
 }
 
 @media screen and (min-width: 380px) {
@@ -217,8 +251,53 @@
   .menu-item-dkt {
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
+    position: relative;
     font-size: 1.5rem;
     margin: 0 0.65em;
+  }
+}
+
+.menu-item-dkt a{
+  font-size: 1.5rem;
+}
+
+.dropdown-menu{
+  display: none;
+}
+
+.dropdown-menu-dkt {
+  display: none;
+  position: absolute;
+  top: 80%;
+  left: 0;
+  width: 6em;
+  background-color: var(--cor-dropdown-hover);
+  padding: 0.15em;
+  list-style: none;
+  z-index: 1000;
+}
+
+.dropdown-menu-dkt.visible {
+  display: block;
+    opacity: 1
+}
+
+.dropdown-item{
+  margin: 0;
+}
+
+.menu-item-dkt:hover .dropdown-menu-dkt {
+    visibility: visible;
+    animation: slideDown 0.3s ease-out;
+}
+
+@keyframes slideDown {
+  from {
+    transform: translateY(-20px);
+  }
+  to {
+    transform: translateY(0);
   }
 }
 
