--- a/Front/vite-project/src/templates/animais_especies.html
+++ b/Front/vite-project/src/templates/animais_especies.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="../../index.js"></script>
-    <title>IJ</title>
+    <title>Nossos Animais - Espécies</title>
   </head>
   <body class="bd-anml">
 
@@ -23,22 +23,34 @@
             <span class="icon"></span>
           </button>
           <ul id="menu" class="menu">
-            <li class="menu-item"><a href="./index.html">Home</a></li>
-            <li class="menu-item"><a href="./src/templates/about.html">Sobre Nós</a></li>
-            <li class="menu-item"><a href="./src/templates/program.html">Programas</a></li>
-            <li class="menu-item"><a href="#">Animais</a></li>
-            <li class="menu-item"><a href="./src/templates/cadastro_voluntario.html">Voluntariado</a></li>
-            <li class="menu-item"><a href="./doacao.html">Doações</a></li>
+            <li class="menu-item"><a href="../index.html">Home</a></li>
+            <li class="menu-item"><a href="./about.html">Sobre Nós</a></li>
+            <li class="menu-item"><a href="./programas.html">Programas</a></li>
+            <li class="menu-item btn btn-secondary" id="dropdownAnimais"  aria-haspopup="true" aria-expanded="false" data-offset="10,20">
+              <a href="#">Animais</a>
+              <ul class="dropdown-menu">
+                <li class="menu-item dropdown-item"><a href=".animais_especies.html">Espécies</a></li>
+                <li class="menu-item dropdown-item"><a href=".animais_regioes.html">Regiões</a></li>
+              </ul>
+            </li>
+            <li class="menu-item"><a href=".cadastro_voluntario.html">Voluntariado</a></li>
+            <li class="menu-item"><a href=".doacao.html">Doações</a></li>
           </ul>
         </div>
         <div class="hdr-desktop">
-          <img class="hdr-desktop-item hdr-logo" src="../assets/images/logoIJ.png" >
+          <img class="hdr-mobile-item hdr-logo" src="../assets/images/logoIJ.png" >
           <ul id="menu-dkt" class="menu-dkt" aria-hidden="true">
-            <li class="menu-item-dkt"><a href="./index.html">Home</a></li>
-            <li class="menu-item-dkt"><a href="./src/templates/about.html">Sobre Nós</a></li>
-            <li class="menu-item-dkt"><a href="./src/templates/program.html">Programas</a></li>
-            <li class="menu-item-dkt"><a href="#">Animais</a></li>
-            <li class="menu-item-dkt"><a href="./src/templates/cadastro_voluntario.html">Voluntariado</a></li>
+            <li class="menu-item-dkt"><a href="../index.html">Home</a></li>
+            <li class="menu-item-dkt"><a href="./about.html">Sobre Nós</a></li>
+            <li class="menu-item-dkt"><a href="./programas.html">Programas</a></li>
+            <li class="menu-item" id="dropdownAnimaisDkt" aria-haspopup="true" aria-expanded="false" data-offset="10,20">
+              <a href="#">Animais</a>
+              <ul class="dropdown-menu-dkt">
+                <li class="menu-item dropdown-item"><a href="./animais_especies.html">Espécies</a></li>
+                <li class="menu-item dropdown-item"><a href="./animais_regioes.html">Regiões</a></li>
+              </ul>
+            </li>
+            <li class="menu-item-dkt"><a href="./cadastro_voluntario.html">Voluntariado</a></li>
             <li class="menu-item-dkt"><a href="./doacao.html">Doações</a></li>
           </ul>
         </div>
