--- a/Front/vite-project/src/templates/animais_regioes.html
+++ b/Front/vite-project/src/templates/animais_regioes.html
@@ -13,7 +13,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="../../index.js"></script>
-    <title>IJ</title>
+    <title>Nossos Animais - Regiões</title>
   </head>
   <body class="bd-anml">
 
@@ -26,27 +26,39 @@
             <span class="icon"></span>
           </button>
           <ul id="menu" class="menu">
-            <li class="menu-item"><a href="./index.html">Home</a></li>
-            <li class="menu-item"><a href="./src/templates/about.html">Sobre Nós</a></li>
-            <li class="menu-item"><a href="./src/templates/program.html">Programas</a></li>
-            <li class="menu-item"><a href="#">Animais</a></li>
-            <li class="menu-item"><a href="./src/templates/cadastro_voluntario.html">Voluntariado</a></li>
-            <li class="menu-item"><a href="./doacao.html">Doações</a></li>
+            <li class="menu-item"><a href="../index.html">Home</a></li>
+            <li class="menu-item"><a href="./about.html">Sobre Nós</a></li>
+            <li class="menu-item"><a href="./programas.html">Programas</a></li>
+            <li class="menu-item btn btn-secondary" id="dropdownAnimais"  aria-haspopup="true" aria-expanded="false" data-offset="10,20">
+              <a href="#">Animais</a>
+              <ul class="dropdown-menu">
+                <li class="menu-item dropdown-item"><a href=".animais_especies.html">Espécies</a></li>
+                <li class="menu-item dropdown-item"><a href=".animais_regioes.html">Regiões</a></li>
+              </ul>
+            </li>
+            <li class="menu-item"><a href=".cadastro_voluntario.html">Voluntariado</a></li>
+            <li class="menu-item"><a href=".doacao.html">Doações</a></li>
           </ul>
         </div>
         <div class="hdr-desktop">
-          <img class="hdr-desktop-item hdr-logo" src="../assets/images/logoIJ.png" >
+          <img class="hdr-mobile-item hdr-logo" src="../assets/images/logoIJ.png" >
           <ul id="menu-dkt" class="menu-dkt" aria-hidden="true">
-            <li class="menu-item-dkt"><a href="./index.html">Home</a></li>
-            <li class="menu-item-dkt"><a href="./src/templates/about.html">Sobre Nós</a></li>
-            <li class="menu-item-dkt"><a href="./src/templates/program.html">Programas</a></li>
-            <li class="menu-item-dkt"><a href="#">Animais</a></li>
-            <li class="menu-item-dkt"><a href="./src/templates/cadastro_voluntario.html">Voluntariado</a></li>
+            <li class="menu-item-dkt"><a href="../index.html">Home</a></li>
+            <li class="menu-item-dkt"><a href="./about.html">Sobre Nós</a></li>
+            <li class="menu-item-dkt"><a href="./programas.html">Programas</a></li>
+            <li class="menu-item" id="dropdownAnimaisDkt" aria-haspopup="true" aria-expanded="false" data-offset="10,20">
+              <a href="#">Animais</a>
+              <ul class="dropdown-menu-dkt">
+                <li class="menu-item dropdown-item"><a href="./animais_especies.html">Espécies</a></li>
+                <li class="menu-item dropdown-item"><a href="./animais_regioes.html">Regiões</a></li>
+              </ul>
+            </li>
+            <li class="menu-item-dkt"><a href="./cadastro_voluntario.html">Voluntariado</a></li>
             <li class="menu-item-dkt"><a href="./doacao.html">Doações</a></li>
           </ul>
         </div>
       </nav>
-    </header> 
+    </header>  
 
     <h2 class="title-principal title-anml">Nossos animais e seus habitats!</h2>
     <section class="container-anml light">
