--- a/Front/vite-project/src/templates/programas.html
+++ b/Front/vite-project/src/templates/programas.html
@@ -16,29 +16,41 @@
     <header>
       <nav class="hdr">
         <div class="hdr-mobile">
-          <img class="hdr-mobile-item hdr-logo" src="src\assets\images\logoIJ.png" >
+          <img class="hdr-mobile-item hdr-logo" src="../assets/images/logoIJ.png" >
           <h1 class="title-principal">Instituto Jaguatirica</h1>
           <button id="hamburguer-button" class="hamburguer-button" aria-label="Menu Principal" aria-controls="menu">
             <span class="icon"></span>
           </button>
           <ul id="menu" class="menu">
-            <li class="menu-item"><a href="#">Home</a></li>
-            <li class="menu-item"><a href="#">Sobre Nós</a></li>
-            <li class="menu-item"><a href="#">Programas</a></li>
-            <li class="menu-item"><a href="#">Animais</a></li>
-            <li class="menu-item"><a href="#">Voluntariado</a></li>
-            <li class="menu-item"><a href="#">Doações</a></li>
+            <li class="menu-item"><a href="../index.html">Home</a></li>
+            <li class="menu-item"><a href="./about.html">Sobre Nós</a></li>
+            <li class="menu-item"><a href="./programas.html">Programas</a></li>
+            <li class="menu-item btn btn-secondary" id="dropdownAnimais"  aria-haspopup="true" aria-expanded="false" data-offset="10,20">
+              <a href="#">Animais</a>
+              <ul class="dropdown-menu">
+                <li class="menu-item dropdown-item"><a href=".animais_especies.html">Espécies</a></li>
+                <li class="menu-item dropdown-item"><a href=".animais_regioes.html">Regiões</a></li>
+              </ul>
+            </li>
+            <li class="menu-item"><a href=".cadastro_voluntario.html">Voluntariado</a></li>
+            <li class="menu-item"><a href=".doacao.html">Doações</a></li>
           </ul>
         </div>
         <div class="hdr-desktop">
-          <img class="hdr-desktop-item hdr-logo" src="../assets/images/logoIJ.png"" >
+          <img class="hdr-mobile-item hdr-logo" src="../assets/images/logoIJ.png" >
           <ul id="menu-dkt" class="menu-dkt" aria-hidden="true">
-            <li class="menu-item-dkt"><a href="#">Home</a></li>
-            <li class="menu-item-dkt"><a href="./src/templates/about.html">Sobre Nós</a></li>
-            <li class="menu-item-dkt"><a href="./src/templates/program.html">Programas</a></li>
-            <li class="menu-item-dkt"><a href="#">Animais</a></li>
-            <li class="menu-item-dkt"><a href="./src/templates/cadastro_voluntario.html">Voluntariado</a></li>
-            <li class="menu-item-dkt"><a href="#">Doações</a></li>
+            <li class="menu-item-dkt"><a href="../index.html">Home</a></li>
+            <li class="menu-item-dkt"><a href="./about.html">Sobre Nós</a></li>
+            <li class="menu-item-dkt"><a href="./programas.html">Programas</a></li>
+            <li class="menu-item" id="dropdownAnimaisDkt" aria-haspopup="true" aria-expanded="false" data-offset="10,20">
+              <a href="#">Animais</a>
+              <ul class="dropdown-menu-dkt">
+                <li class="menu-item dropdown-item"><a href="./animais_especies.html">Espécies</a></li>
+                <li class="menu-item dropdown-item"><a href="./animais_regioes.html">Regiões</a></li>
+              </ul>
+            </li>
+            <li class="menu-item-dkt"><a href="./cadastro_voluntario.html">Voluntariado</a></li>
+            <li class="menu-item-dkt"><a href="./doacao.html">Doações</a></li>
           </ul>
         </div>
       </nav>
