--- a/Front/vite-project/src/templates/doacao.html
+++ b/Front/vite-project/src/templates/doacao.html
@@ -60,7 +60,8 @@
     
 
     <div class="container-doacao">
-      <h1 class="titulo-doacao">Ajude a proteger a vida silvestre:<br>Faça sua Doação!</h1>
+      <h1 class="titulo-doacao">Faça sua Doação!</h1>
+      <h1 class="titulo-doacao2">Ajude a proteger a vida silvestre</h1>
       <p class="subtitulo-doacao">
         Você pode doar mensalmente no cartão de crédito, ou também no PIX!
       </p>
