imagens do animais-espécies

--- a/Front/vite-project/src/templates/animais_especies.html
+++ b/Front/vite-project/src/templates/animais_especies.html
@@ -65,7 +65,7 @@
       <div class="carousel">
         <ul class = "carousel-list region anml-list carousel-list">
           <li class = "carousel-item anml-card card-light">
-            <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+            <img class = "anml-card-img" src="../assets/images/Animais/reptil/jabutitinga.jpg">
             <h2 class="anml-name">Iporã</h2>
             <h4 class="anml-spe">Jabuti-tinga</h4>
             <h5 class="anml-spe"><em class="sci-name-item">Chelonoidis denticulatus</em></h5>
@@ -82,7 +82,7 @@
       <div class="carousel">
         <ul class = " carousel-list region anml-list">
           <li class = "carousel-item anml-card card-medium">
-            <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+            <img class = "anml-card-img" src="../assets/images/Animais/ave/ararinha_azul/arararinhajade.jpg">
             <h2 class="anml-name">Jade</h2>
             <h4 class="anml-spe">Ararinha-azul</h4>
             <h5 class="anml-spe"><em class="sci-name-item">Cyanopsitta spixii</em></h5>
@@ -99,7 +99,7 @@
       <h3 class="subtitle-anml">Mamífero</h3>
           <ul class = "carousel-list region anml-list">
             <li class = "carousel-item anml-card card-light">
-              <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+              <img class = "anml-card-img" src="../assets/images/Animais/mamifero/onca/onapintada.jpg">
                 <h2 class="anml-name">Juma</h2>
                 <h4 class="anml-spe">Onça-pintada</h4>
                 <h5 class="anml-spe"><em class="sci-name-item">Panthera onca</em></h5>
@@ -110,7 +110,7 @@
               </ul>
             </li>
             <li class = "carousel-item anml-card card-light">
-              <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+              <img class = "anml-card-img" src="../assets/images/Animais/mamifero/micoleao/micoleao2.jpg">
               <h2 class="anml-name">Solar</h2>
               <h4 class="anml-spe">Mico-leão-dourado</h4>
               <h5 class="anml-spe"><em class="sci-name-item">Leontopithecus rosalia</em></h5>
@@ -121,7 +121,7 @@
               </ul>
             </li>
             <li class = "carousel-item anml-card card-light">
-              <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+              <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/gato-do-mato.jpg">
               <h2 class="anml-name">Sombra</h2>
               <h4 class="anml-spe">Gato-do-mato</h4>
               <h5 class="anml-spe"><em class="sci-name-item">Leopardus wiedii</em></h5>
@@ -143,7 +143,7 @@
               </ul>           
             </li>
             <li class = "carousel-item anml-card card-light">
-              <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+              <img class = "anml-card-img" src="../assets/images/Animais/mamifero/tamanduabandeira/tamanduabandeira1220x600.jpg">
               <h2 class="anml-name">Tande</h2>
               <h4 class="anml-spe">Tamanduá-bandeira</h4>
               <h5 class="anml-spe"><em class="sci-name-item">Myrmecophaga tridactyla</em></h5>
@@ -154,7 +154,7 @@
               </ul>      
             </li>
             <li class = "carousel-item anml-card card-light">
-              <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+              <img class = "anml-card-img" src="../assets/images/Animais/mamifero/loboguara/lobo-guara-pequi-1645108055793_v2_1x1.jpg">
               <h2 class="anml-name">Guaraná</h2>
               <h4 class="anml-spe">Lobo-guará</h4>
               <h5 class="anml-spe"><em class="sci-name-item">Chrysocyon brachyurus</em></h5>
@@ -165,7 +165,7 @@
               </ul>
             </li> 
             <li class = "carousel-item anml-card card-light">
-              <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+              <img class = "anml-card-img" src="../assets/images/Animais/mamifero/peixeboi/peixeboi.webp">
               <h2 class="anml-name">Yara</h2>
               <h4 class="anml-spe">Peixe-boi</h4>
               <h5 class="anml-spe"><em class="sci-name-item">Trichechus inunguis</em></h5>
@@ -176,7 +176,7 @@
               </ul>
             </li>
             <li class = "carousel-item anml-card card-light">
-              <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
+              <img class = "anml-card-img" src="../assets/images/Animais/mamifero/tatucanastra/tatu_canastra.jpg">
               <h2 class="anml-name">Fuleco</h2>
               <h4 class="anml-spe">Tatu-canastra</h4>
               <h5 class="anml-spe"><em class="sci-name-item">Priodontes maximus</em></h5>
