--- a/Front/vite-project/src/templates/animais_especies.html
+++ b/Front/vite-project/src/templates/animais_especies.html
@@ -21,179 +21,181 @@
 
 <body class="bd-anml">
 
-    <header>
-      <nav class="hdr">
-        <div class="hdr-mobile">
-          <img class="hdr-mobile-item hdr-logo" src="../assets/images/logoIJ.png" >
-          <h1 class="title-principal">Instituto Jaguatirica</h1>
-          <button id="hamburguer-button" class="hamburguer-button" aria-label="Menu Principal" aria-controls="menu">
-            <span class="icon"></span>
-          </button>
-          <ul id="menu" class="menu">
-            <li class="menu-item"><a href="../index.html">Home</a></li>
-            <li class="menu-item"><a href="./about.html">Sobre Nós</a></li>
-            <li class="menu-item"><a href="./programas.html">Programas</a></li>
-            <li class="menu-item btn btn-secondary" id="dropdownAnimais"  aria-haspopup="true" aria-expanded="false" data-offset="10,20">
-              <a href="#">Animais</a>
-              <ul class="dropdown-menu">
-                <li class="menu-item dropdown-item"><a href=".animais_especies.html">Espécies</a></li>
-                <li class="menu-item dropdown-item"><a href=".animais_regioes.html">Regiões</a></li>
-              </ul>
-            </li>
-            <li class="menu-item"><a href=".cadastro_voluntario.html">Voluntariado</a></li>
-            <li class="menu-item"><a href=".doacao.html">Doações</a></li>
-          </ul>
-        </div>
-        <div class="hdr-desktop">
-          <img class="hdr-mobile-item hdr-logo" src="../assets/images/logoIJ.png" >
-          <ul id="menu-dkt" class="menu-dkt" aria-hidden="true">
-            <li class="menu-item-dkt"><a href="../index.html">Home</a></li>
-            <li class="menu-item-dkt"><a href="./about.html">Sobre Nós</a></li>
-            <li class="menu-item-dkt"><a href="./programas.html">Programas</a></li>
-            <li class="menu-item" id="dropdownAnimaisDkt" aria-haspopup="true" aria-expanded="false" data-offset="10,20">
-              <a href="#">Animais</a>
-              <ul class="dropdown-menu-dkt">
-                <li class="menu-item dropdown-item"><a href="./animais_especies.html">Espécies</a></li>
-                <li class="menu-item dropdown-item"><a href="./animais_regioes.html">Regiões</a></li>
-              </ul>
-            </li>
-            <li class="menu-item-dkt"><a href="./cadastro_voluntario.html">Voluntariado</a></li>
-            <li class="menu-item-dkt"><a href="./doacao.html">Doações</a></li>
-          </ul>
-        </div>
-      </nav>
-    </header> 
-    
-    <h2 class="title-principal title-anml">Nossos animais e seus habitats!</h2>
-    <section class="container-anml light">
-      <h3 class="subtitle-anml">Réptil</h3>
-      <div class="carousel">
-        <ul class = "carousel-list region anml-list carousel-list">
-          <li class = "carousel-item anml-card card-light">
-            <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
-            <h2 class="anml-name">Iporã</h2>
-            <h4 class="anml-spe">Jabuti-tinga</h4>
-            <h5 class="anml-spe"><em class="sci-name-item">Chelonoidis denticulatus</em></h5>
-            <h4 class="anml-spe">Amazônia</h4>
-            <ul class="anml-data">
-              <li class="anml-data-item"><label class="label ext3">Vulnerável</label></li>
-              <li class="anml-data-item"><label class="label male">Macho</label></li>
-            </ul>     
-        </ul>
-      </div>
-    </section>
-    <section class="container-anml medium">
-    <h3 class="subtitle-anml">Ave</h3>
-      <div class="carousel">
-        <ul class = " carousel-list region anml-list">
-          <li class = "carousel-item anml-card card-medium">
-            <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
-            <h2 class="anml-name">Jade</h2>
-            <h4 class="anml-spe">Ararinha-azul</h4>
-            <h5 class="anml-spe"><em class="sci-name-item">Cyanopsitta spixii</em></h5>
-            <h4 class="anml-spe">Cerrado</h4>
-            <ul class="anml-data">
-              <li class="anml-data-item"><label class="label ext6">Extinto na Natureza</label></li>
-              <li class="anml-data-item"><label class="label fem">Fêmea</label></li>
-            </ul>    
+  <header>
+    <nav class="hdr">
+      <div class="hdr-mobile">
+        <img class="hdr-mobile-item hdr-logo" src="../assets/images/logoIJ.png">
+        <h1 class="title-principal">Instituto Jaguatirica</h1>
+        <button id="hamburguer-button" class="hamburguer-button" aria-label="Menu Principal" aria-controls="menu">
+          <span class="icon"></span>
+        </button>
+        <ul id="menu" class="menu">
+          <li class="menu-item"><a href="../index.html">Home</a></li>
+          <li class="menu-item"><a href="./about.html">Sobre Nós</a></li>
+          <li class="menu-item"><a href="./programas.html">Programas</a></li>
+          <li class="menu-item btn btn-secondary" id="dropdownAnimais" aria-haspopup="true" aria-expanded="false"
+            data-offset="10,20">
+            <a href="#">Animais</a>
+            <ul class="dropdown-menu">
+              <li class="menu-item dropdown-item"><a href=".animais_especies.html">Espécies</a></li>
+              <li class="menu-item dropdown-item"><a href=".animais_regioes.html">Regiões</a></li>
+            </ul>
           </li>
+          <li class="menu-item"><a href=".cadastro_voluntario.html">Voluntariado</a></li>
+          <li class="menu-item"><a href=".doacao.html">Doações</a></li>
         </ul>
       </div>
+      <div class="hdr-desktop">
+        <img class="hdr-mobile-item hdr-logo" src="../assets/images/logoIJ.png">
+        <ul id="menu-dkt" class="menu-dkt" aria-hidden="true">
+          <li class="menu-item-dkt"><a href="../index.html">Home</a></li>
+          <li class="menu-item-dkt"><a href="./about.html">Sobre Nós</a></li>
+          <li class="menu-item-dkt"><a href="./programas.html">Programas</a></li>
+          <li class="menu-item" id="dropdownAnimaisDkt" aria-haspopup="true" aria-expanded="false" data-offset="10,20">
+            <a href="#">Animais</a>
+            <ul class="dropdown-menu-dkt">
+              <li class="menu-item dropdown-item"><a href="./animais_especies.html">Espécies</a></li>
+              <li class="menu-item dropdown-item"><a href="./animais_regioes.html">Regiões</a></li>
+            </ul>
+          </li>
+          <li class="menu-item-dkt"><a href="./cadastro_voluntario.html">Voluntariado</a></li>
+          <li class="menu-item-dkt"><a href="./doacao.html">Doações</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+    <section class="sidebar">
+      <ul>
+        <li><a href="#mammalia">Mamíferos</a></li>
+        <li><a href="#aves">Aves</a></li>
+        <li><a href="#reptalia">Répteis</a></li>
+        <li><a href="#amphibia">Anfíbios</a></li>
+      </ul>
     </section>
-    <section class="container-anml light">
-      <h3 class="subtitle-anml">Mamífero</h3>
-          <ul class = "carousel-list region anml-list">
-            <li class = "carousel-item anml-card card-light">
-              <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
-                <h2 class="anml-name">Juma</h2>
-                <h4 class="anml-spe">Onça-pintada</h4>
-                <h5 class="anml-spe"><em class="sci-name-item">Panthera onca</em></h5>
-                <h4 class="anml-spe">Mata Atlântica</h4>
-              <ul class="anml-data">
-                <li class="anml-data-item"><label class="label ext3">Quase Ameaçado</label></li>
-                <li class="anml-data-item"><label class="label fem">Fêmea</label></li>
-              </ul>
-            </li>
-            <li class = "carousel-item anml-card card-light">
-              <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
-              <h2 class="anml-name">Solar</h2>
-              <h4 class="anml-spe">Mico-leão-dourado</h4>
-              <h5 class="anml-spe"><em class="sci-name-item">Leontopithecus rosalia</em></h5>
-              <h4 class="anml-spe">Mata Atlântica</h4>
-              <ul class="anml-data">
-                <li class="anml-data-item"><label class="label ext4">Ameaçado</label></li>
-                <li class="anml-data-item"><label class="label male">Macho</label></li>
-              </ul>
-            </li>
-            <li class = "carousel-item anml-card card-light">
-              <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
-              <h2 class="anml-name">Sombra</h2>
-              <h4 class="anml-spe">Gato-do-mato</h4>
-              <h5 class="anml-spe"><em class="sci-name-item">Leopardus wiedii</em></h5>
-              <h4 class="anml-spe">Mata Atlântica</h4>
-              <ul class="anml-data">
-                <li class="anml-data-item"><label class ="label ext3">Quase Ameaçado</label></li>
-                <li class="anml-data-item"><label class="label male">Macho</label></li>
-              </ul>
-            </li>
-            <li class = "carousel-item anml-card card-light"> 
-              <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
-              <h2 class="anml-name">Pitanga</h2>
-              <h4 class="anml-spe">Jaguatirica</h4>
-              <h5 class="anml-spe"><em class="sci-name-item">Leopardus pardalis</em></h5>
-              <h4 class="anml-spe">Mata Atlântica</h4>
-              <ul class="anml-data">
-                <li class="anml-data-item"><label class ="label ext1">Pouco Ameaçado</label></li>
-                <li class="anml-data-item"><label class="label fem">Fêmea</label></li>
-              </ul>           
-            </li>
-            <li class = "carousel-item anml-card card-light">
-              <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
-              <h2 class="anml-name">Tande</h2>
-              <h4 class="anml-spe">Tamanduá-bandeira</h4>
-              <h5 class="anml-spe"><em class="sci-name-item">Myrmecophaga tridactyla</em></h5>
-              <h4 class="anml-spe">Cerrado</h4>
-              <ul class="anml-data">
-                <li class="anml-data-item"><label class="label ext3">Vulnerável</label></li>
-                <li class="anml-data-item"><label class="label male">Macho</label></li>
-              </ul>      
-            </li>
-            <li class = "carousel-item anml-card card-light">
-              <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
-              <h2 class="anml-name">Guaraná</h2>
-              <h4 class="anml-spe">Lobo-guará</h4>
-              <h5 class="anml-spe"><em class="sci-name-item">Chrysocyon brachyurus</em></h5>
-              <h4 class="anml-spe">Cerrado</h4>
-              <ul class="anml-data">
-                <li class="anml-data-item"><label class="label ext2">Quase Ameaçado</label></li>
-                <li class="anml-data-item"><label class="label male">Macho</label></li>
-              </ul>
-            </li> 
-            <li class = "carousel-item anml-card card-light">
-              <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
-              <h2 class="anml-name">Yara</h2>
-              <h4 class="anml-spe">Peixe-boi</h4>
-              <h5 class="anml-spe"><em class="sci-name-item">Trichechus inunguis</em></h5>
-              <h4 class="anml-spe">Amazônia</h4>
-              <ul class="anml-data">
-                <li class="anml-data-item"><label class="label ext3">Vulnerável</label></li>
-                <li class="anml-data-item"><label class="label fem">Fêmea</label></li>
-              </ul>
-            </li>
-            <li class = "carousel-item anml-card card-light">
-              <img class = "anml-card-img" src="../assets/images/Animais/mamifero/jaguatirica/jaguaritica filhota.png">
-              <h2 class="anml-name">Fuleco</h2>
-              <h4 class="anml-spe">Tatu-canastra</h4>
-              <h5 class="anml-spe"><em class="sci-name-item">Priodontes maximus</em></h5>
-              <h4 class="anml-spe">Amazônia</h4>
-              <ul class="anml-data">
-                <li class="anml-data-item"><label class="label ext3">Vulnerável</label></li>
-                <li class="anml-data-item"><label class="label male">Macho</label></li>
-              </ul>     
-            </li>
-          </ul>
-          <div class="carousel-indicators"></div>
+    <section id="classestax">
+      <!-- Mammalia -->
+      <div id="mammalia" class="category">
+        <h2>Mammalia (Mamíferos)</h2>
+        <div class="card-container">
+          <div class="card">
+            <h3>Onça-pintada</h3>
+            <img
+              src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e9/Jaguar_%28Panthera_onca_palustris%29_female_Piquiri_River_2.JPG/800px-Jaguar_%28Panthera_onca_palustris%29_female_Piquiri_River_2.JPG"
+              alt="onça">
+            <p>Um dos maiores felinos das Américas.</p>
+          </div>
+          <div class="card">
+            <h3>Tamanduá-bandeira</h3>
+            <img
+              src="https://prefeitura.pbh.gov.br/sites/default/files/estrutura-de-governo/fundacao-de-parques-e-zoobotanica/tamanduabandeira1220x600.jpg"
+              alt="tamandua">
+            <p>Conhecido por sua longa língua para capturar insetos.</p>
+          </div>
+          <div class="card">
+            <h3>Macaco-prego</h3>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTR4P--SUboJJ6SCe7Y4XOwrPcMQxEBcaJqKg&s"
+              alt="tamandua">
+            <p>Um primata inteligente e adaptável.</p>
+          </div>
+          <div class="card">
+            <h3>Capivara</h3>
+            <img
+              src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Hydrochoeris_hydrochaeris_in_Brazil_in_Petr%C3%B3polis%2C_Rio_de_Janeiro%2C_Brazil_09.jpg/280px-Hydrochoeris_hydrochaeris_in_Brazil_in_Petr%C3%B3polis%2C_Rio_de_Janeiro%2C_Brazil_09.jpg"
+              alt="capivara">
+            <p>O maior roedor do mundo.</p>
+          </div>
         </div>
+      </div>
+      <div id="aves" class="category">
+        <h2>Aves</h2>
+        <div class="card-container">
+          <div class="card">
+            <h3>Arara-azul</h3>
+            <img
+              src="https://segredosdomundo.r7.com/wp-content/uploads/2020/01/arara-azul-carateristicas-e-comportamento-5.jpg"
+              alt="araraazul">
+            <p>Uma ave colorida apreciada pela sua beleza.</p>
+          </div>
+          <div class="card">
+            <h3>Tucano</h3>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQtwmQdbitnYo9MWWmyw4yS2Pur22qtsVdMCw&s"
+              alt="tucano">
+            <p>Famoso por seu bico grande e colorido.</p>
+          </div>
+          <div class="card">
+            <h3>Harpia</h3>
+            <img
+              src="https://lh5.googleusercontent.com/proxy/BugEf2O4-mrOOVpe9_iLO_ZdT1xB-CuMN1IzCzAyk1WVDH_Ij_eAn-GGN3dJvzEhB7tf9rqFZ7TuqjGAc2UAytnEXvR836aK4Uq38vSPNfucnfYxwD6YtO-XaPE"
+              alt="harpia">
+            <p>Uma das maiores águias do mundo.</p>
+          </div>
+          <div class="card">
+            <h3>Sabiá</h3>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Turdus-rufiventris.jpg" alt="sabiá">
+            <p>Conhecido por seu canto melodioso.</p>
+          </div>
+        </div>
+      </div>
+
+
+      <div id="reptalia" class="category">
+        <h2>Reptilia (Répteis)</h2>
+        <div class="card-container">
+          <div class="card">
+            <h3>Jacaré</h3>
+            <img src="https://static.biologianet.com/2020/05/jacare-do-papo-amarelo.jpg" alt="jacaré">
+            <p>Um predador ágil e poderoso.</p>
+          </div>
+          <div class="card">
+            <h3>Sucuri</h3>
+            <img src="https://www.petz.com.br/blog/wp-content/uploads/2019/07/tudo-sobre-a-cobra-sucuri.jpg"
+              alt="sucuri">
+            <p>Uma das maiores cobras do mundo.</p>
+          </div>
+          <div class="card">
+            <h3>Iguana</h3>
+            <img src="https://s2.static.brasilescola.uol.com.br/be/2022/05/iguana-verde.jpg" alt="iguana">
+            <p>Conhecida por sua aparência distinta.</p>
+          </div>
+          <div class="card">
+            <h3>Jararaca</h3>
+            <img
+              src="https://cdn.jornaldaparaiba.com.br/wp-content/uploads/2022/01/WhatsApp-Image-2022-01-27-at-13.52.31.jpeg?xid=633099"
+              alt="jararaca">
+            <p>Uma das cobras mais venenosas do Brasil.</p>
+          </div>
+        </div>
+      </div>
+
+      <div id="amphibia" class="category">
+        <h2>Amphibia (Anfíbios)</h2>
+        <div class="card-container">
+          <div class="card">
+            <h3>Sapo cururu</h3>
+            <img src="https://animalbusiness.com.br/wp-content/uploads/2018/11/SAM_0338.jpg" alt="sapocururu">
+            <p>Conhecido por sua pele verrugosa.</p>
+          </div>
+          <div class="card">
+            <h3>Perereca</h3>
+            <img
+              src="https://static.nationalgeographicbrasil.com/files/styles/image_3200/public/01-waq-new-frog-species.webp?w=1600&h=900"
+              alt="perereca">
+            <p>Capaz de saltar grandes distâncias.</p>
+          </div>
+          <div class="card">
+            <h3>Salamandra</h3>
+            <img src="https://i.pinimg.com/736x/7f/8c/76/7f8c7667136b6b2f3abb6883bd75f03e.jpg" alt="salamandra">
+            <p>Um anfíbio com aparência semelhante a um lagarto.</p>
+          </div>
+          <div class="card">
+            <h3>Rã</h3>
+            <img
+              src="https://s2.glbimg.com/LLBBu_CoJNJKgJRZ8LTgb0L0WeE=/e.glbimg.com/og/ed/f/original/2020/08/13/5f343a45eac1a.jpg"
+              alt="rã">
+            <p>Popular por seus saltos e croás.</p>
+          </div>
+        </div>
+      </div>
     </section>
   <script src="../menu.js"></script>
   <script src="../carousel.js"></script>
