adição das páginas de login e registro, alteração do form de cadastro do voluntário

--- a/Front/vite-project/src/templates/login.html
+++ b/Front/vite-project/src/templates/login.html
@@ -64,15 +64,7 @@
   <section class="boxcad">
     <form name="cadastro" class="cadastro">
       <fieldset>
-        <legend>Entrar</legend>
-        <label for="nome">
-          Nome:
-        </label>
-        <input type="text" id="nome" name="nome" />
-        <label for="cpf">
-          cpf:
-        </label>
-        <input type="text" id="cpf" name="cpf" />
+        <legend>Entre em sua conta</legend>
         <label for="email">
           email:
         </label>
@@ -82,48 +74,7 @@
         </label>
         <input type="password" id="senha" name="senha">
 
-        <label for="estado">
-          estado:
-        </label>
-        <select id="estado" name="estado">
-          <option value="AC">Acre</option>
-          <option value="AL">Alagoas</option>
-          <option value="AP">Amapá</option>
-          <option value="AM">Amazonas</option>
-          <option value="BA">Bahia</option>
-          <option value="CE">Ceará</option>
-          <option value="DF">Distrito Federal</option>
-          <option value="ES">Espírito Santo</option>
-          <option value="GO">Goiás</option>
-          <option value="MA">Maranhão</option>
-          <option value="MT">Mato Grosso</option>
-          <option value="MS">Mato Grosso do Sul</option>
-          <option value="MG">Minas Gerais</option>
-          <option value="PA">Pará</option>
-          <option value="PB">Paraíba</option>
-          <option value="PR">Paraná</option>
-          <option value="PE">Pernambuco</option>
-          <option value="PI">Piauí</option>
-          <option value="RJ">Rio de Janeiro</option>
-          <option value="RN">Rio Grande do Norte</option>
-          <option value="RS">Rio Grande do Sul</option>
-          <option value="RO">Rondônia</option>
-          <option value="RR">Roraima</option>
-          <option value="SC">Santa Catarina</option>
-          <option value="SP">São Paulo</option>
-          <option value="SE">Sergipe</option>
-          <option value="TO">Tocantins</option>
-          <option value="EX">Estrangeiro</option>
-        </select>
-        <label for="endereco">
-          endereço:
-        </label>
-        <input type="text" id="endereco" name="endereco" />
-        <label for="cidade">
-          cidade:
-        </label>
-        <input type="text" id="cidade" name="cidade" />
-        <input type="button" id="btnGerar" value="Enviar" onclick="envioVoluntario()" />
+        <input type="button" id="btnGerar" value="Entrar" onclick="envioVoluntario()" />
       </fieldset>
     </form>
   </section>
