--- a/Front/vite-project/src/templates/registro.html
+++ b/Front/vite-project/src/templates/registro.html
@@ -60,12 +60,20 @@
     </nav>
   </header>
   <section id="titulo">
-    <h1><em><u>Vem ser voluntário!</u></em></h1>
+    <h1><em><u>Registrar</u></em></h1>
   </section>
   <section class="boxcad">
     <form name="cadastro" class="cadastro">
       <fieldset>
-        <legend>Voluntário</legend>
+        <legend>Crie uma conta</legend>
+        <label for="nome">
+          Nome:
+        </label>
+        <input type="text" id="nome" name="nome" />
+        <label for="cpf">
+          cpf:
+        </label>
+        <input type="text" id="cpf" name="cpf" />
         <label for="email">
           email:
         </label>
@@ -74,7 +82,49 @@
           senha:
         </label>
         <input type="password" id="senha" name="senha">
-<input type="button" id="btnGerar" value="Enviar" onclick="envioVoluntario()" />
+
+        <label for="estado">
+          estado:
+        </label>
+        <select id="estado" name="estado">
+          <option value="AC">Acre</option>
+          <option value="AL">Alagoas</option>
+          <option value="AP">Amapá</option>
+          <option value="AM">Amazonas</option>
+          <option value="BA">Bahia</option>
+          <option value="CE">Ceará</option>
+          <option value="DF">Distrito Federal</option>
+          <option value="ES">Espírito Santo</option>
+          <option value="GO">Goiás</option>
+          <option value="MA">Maranhão</option>
+          <option value="MT">Mato Grosso</option>
+          <option value="MS">Mato Grosso do Sul</option>
+          <option value="MG">Minas Gerais</option>
+          <option value="PA">Pará</option>
+          <option value="PB">Paraíba</option>
+          <option value="PR">Paraná</option>
+          <option value="PE">Pernambuco</option>
+          <option value="PI">Piauí</option>
+          <option value="RJ">Rio de Janeiro</option>
+          <option value="RN">Rio Grande do Norte</option>
+          <option value="RS">Rio Grande do Sul</option>
+          <option value="RO">Rondônia</option>
+          <option value="RR">Roraima</option>
+          <option value="SC">Santa Catarina</option>
+          <option value="SP">São Paulo</option>
+          <option value="SE">Sergipe</option>
+          <option value="TO">Tocantins</option>
+          <option value="EX">Estrangeiro</option>
+        </select>
+        <label for="endereco">
+          endereço:
+        </label>
+        <input type="text" id="endereco" name="endereco" />
+        <label for="cidade">
+          cidade:
+        </label>
+        <input type="text" id="cidade" name="cidade" />
+        <input type="button" id="btnGerar" value="Enviar" onclick="criarConta()" />
       </fieldset>
     </form>
   </section>
