--- a/Front/vite-project/src/static/header.css
+++ b/Front/vite-project/src/static/header.css
@@ -5,15 +5,15 @@
   background-color: var(--cor-escura-2);
   list-style: none;
   position:relative;
-  padding: 0.15em;
-} 
-
+  z-index: 2;
+}
 .menu {
   display: flex;
   flex-direction: column;
   padding: 0;
   margin: 0;
   width: 100vw;
+
 }
 
 .hamburguer-button .icon {
@@ -62,6 +62,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  z-index: 0;
 }
 
 .hdr-desktop {
@@ -106,7 +107,7 @@
   display: none;
   background-color: var(--cor-escura-2);
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-  z-index: 1;
+  z-index: 2;
   padding-left: 0;
   }
 
@@ -210,10 +211,24 @@
   .menu-item-dkt {
     display: flex;
     justify-content: space-evenly;
-    margin: 0 0.65em;
     font-size: 1.25rem;
   }
+
+  .menu-item-dkt a {
+    display: flex;
+    justify-content: space-evenly;
+    margin: 0 0.5em;
+    font-size: 1rem;
+  }
+
+  #dropdownAnimaisDKT a{
+
+    font-size: 1rem;
+  
+  }
 }
+
+
 
 @media screen and (min-width: 1000px) {
   .hdr-mobile {
